HomePage and Posts style fixes
- Prevented posts section from overflowing
- Adjusted spacing between posts and events
- Increased HomePage content width
- Applied new padding to HomePage <sections> to reduce vertical space
- Fixed height of EventPreviews
- Changed className on PostsContainer <li> elements to posts-container__item instead of post, as the same styles were being applied to the <li> and the <article> within it
- Removed text-link mixin from the see more events link on desktop
- Reduced font size on posts
- Removed unnecessary style rules for <a>

--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -10,9 +10,8 @@
     & * {
         text-align: left;
         margin-bottom: 0.5rem;
+        font-size: 1.2rem;
     }
-
-
 
     &__avatar {
         @include avatar(3rem);
@@ -49,8 +48,10 @@
     &__reactions {
         display: flex;
         align-items: center;
-        margin-top: -0.5rem;
+        margin-top: 0.75rem;
         gap: 2rem;
+        height: 2rem;
+        margin-bottom: 0;
     }
 
     &__btn {
@@ -61,6 +62,7 @@
         border: none;
         padding: 0.5rem;
         color: $light;
+        margin-bottom: 0;
     }
 
     &__icon {
@@ -76,11 +78,4 @@
             padding: 0 1rem;
         }
     }
-
-}
-
-a {
-    text-align: left;
-    display: flex;
-    justify-content: flex-start;
 }
